--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Push the Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
