--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
+    - name: Building the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
   push_to_registry:
     name: Push the Docker image to Docker Hub
