--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/metadata-action@v4
         id: meta
         with:
-          images: britorafa/image2tile
+          images: williambolduc05/myportuguesetile
           flavor: latest=false
           tags: type=sha
 
