--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,14 +29,14 @@ jobs:
       - name: login docker hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME}}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN}}
+          username: ${{ secrets.DOCKERHUB_USERNAME}}
+          password: ${{ secrets.DOCKERHUB_TOKEN}}
 
       - name: define metadata
         uses: docker/metadata-action@v4
         id: meta
         with:
-          images: williambolduc05/myportuguesetile
+          images: britorafa/image2tile
           flavor: latest=false
           tags: type=sha
 
